--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
 	min-height: 650px;
 	padding: 21px 0 93px 0;
-	background-image: url(../../img/bg1.jpg);
+	background-image: url(../img/bg1.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
