--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -47,6 +47,8 @@ font-style: normal;
 @import "blocks/consultation";
 @import "blocks/forms";
 @import "blocks/carousel";
+@import "blocks/catalog";
+
 
 @import "media";
 
