--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -19,9 +19,15 @@
 		height: 55px;
 		font-size: 16px;
 	}
+	&:hover {
+		background-color: #a00000;
+	}
 	&_mini {
 		width: 131px;
 		height: 40px;
 		font-size: 14px;
+		&:hover {
+			box-shadow: 0px 0px 8px #c70101;
+		}
 	}
 }
