--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -48,7 +48,8 @@ font-style: normal;
 @import "blocks/forms";
 @import "blocks/carousel";
 @import "blocks/catalog";
-
+@import "blocks/reviews";
+@import "blocks/footer";
 
 @import "media";
 
