--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,6 +50,7 @@ font-style: normal;
 @import "blocks/catalog";
 @import "blocks/reviews";
 @import "blocks/footer";
+@import "blocks/modal";
 
 @import "media";
 
