--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -12,4 +12,12 @@
 		color: #ffffff;
 		margin-top: 80px;
 	}
+	.error {
+		border: 2px solid red;
+	}
+	label.error {
+		color: #fff;
+		border: none;
+		margin-bottom: 15px;
+	}
 }
