--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -40,6 +40,13 @@
 	&_mini {
 		min-height: 140px;
 	}
+	.error {
+		border: 2px solid red;
+	}
+	label.error {
+		border: none;
+		margin-bottom: 15px;
+	}
 }
 
 #consultation, #order, #thanks {
