smooth scroll and pageup

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -51,6 +51,7 @@ font-style: normal;
 @import "blocks/reviews";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/pageup";
 
 @import "media";
 
