--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -33,6 +33,7 @@ font-style: normal;
 }
 
 @import "base/variables";
+@import "base/animations";
 .container {
 	max-width: 950px;
 	margin: 0 auto;
